# swiss-weather-mcp

./: .gitignore  AGENTS.md  Cargo.toml  README.md
src/: main.rs  mcp_engine.rs
